--- a/src/Catalogs/пэмМетрики/Forms/ФормаСписка/Form.form
+++ b/src/Catalogs/пэмМетрики/Forms/ФормаСписка/Form.form
@@ -35,7 +35,7 @@
       <showLeftMargin>true</showLeftMargin>
       <united>true</united>
       <throughAlign>Auto</throughAlign>
-      <currentRowUse>Auto</currentRowUse>
+      <currentRowUse>DontUse</currentRowUse>
     </extInfo>
   </items>
   <items xsi:type="form:Table">
@@ -59,10 +59,8 @@
       <userVisible>
         <common>true</common>
       </userVisible>
-      <dataPath xsi:type="form:MultiLanguageDataPath">
-        <paths xsi:type="form:DataPath">
-          <segments>Список.Активность</segments>
-        </paths>
+      <dataPath xsi:type="form:DataPath">
+        <segments>Список.Активность</segments>
       </dataPath>
       <extendedTooltip>
         <name>АктивностьРасширеннаяПодсказка</name>
@@ -108,10 +106,8 @@
       <userVisible>
         <common>true</common>
       </userVisible>
-      <dataPath xsi:type="form:MultiLanguageDataPath">
-        <paths xsi:type="form:DataPath">
-          <segments>Список.Description</segments>
-        </paths>
+      <dataPath xsi:type="form:DataPath">
+        <segments>Список.Description</segments>
       </dataPath>
       <extendedTooltip>
         <name>НаименованиеРасширеннаяПодсказка</name>
@@ -160,10 +156,8 @@
       <userVisible>
         <common>true</common>
       </userVisible>
-      <dataPath xsi:type="form:MultiLanguageDataPath">
-        <paths xsi:type="form:DataPath">
-          <segments>Список.ТипМетрики</segments>
-        </paths>
+      <dataPath xsi:type="form:DataPath">
+        <segments>Список.ТипМетрики</segments>
       </dataPath>
       <extendedTooltip>
         <name>ТипМетрикиРасширеннаяПодсказка</name>
@@ -216,10 +210,8 @@
       <userVisible>
         <common>true</common>
       </userVisible>
-      <dataPath xsi:type="form:MultiLanguageDataPath">
-        <paths xsi:type="form:DataPath">
-          <segments>Список.МетодПолученияМетрики</segments>
-        </paths>
+      <dataPath xsi:type="form:DataPath">
+        <segments>Список.МетодПолученияМетрики</segments>
       </dataPath>
       <extendedTooltip>
         <name>МетодПолученияМетрикиРасширеннаяПодсказка</name>
@@ -273,10 +265,8 @@
           <role>Role.пэмПолучениеМетрик</role>
         </for>
       </userVisible>
-      <dataPath xsi:type="form:MultiLanguageDataPath">
-        <paths xsi:type="form:DataPath">
-          <segments>Список.Ref</segments>
-        </paths>
+      <dataPath xsi:type="form:DataPath">
+        <segments>Список.Ref</segments>
       </dataPath>
       <extendedTooltip>
         <name>СсылкаРасширеннаяПодсказка</name>
